welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:11: error: not found: value getCouleurSOl
 }else if (getCouleurSOl()==Color.green && estFaceMur()==true){
           ^