welcome.lessons.welcome.methods.slug.SlugTracking.scala.code

 def isFacingTrail():Boolean = {
 	
 var vert:Boolean=false

  if (getCouleurSol()==Color.green && estFaceMur()==false){
      avance()
    vert=true 
     
 }else if (getCouleurSOl()==Color.green && estFaceMur()==true){
  recule()
 vert=false
 
 }
 else {
 avance() }
 
 return vert ;
}   